third_party/WebKit/Source/modules/webdatabase/sqlite/SQLiteDatabase.cpp
@@ -47,11 +47,14 @@ SQLiteDatabase::SQLiteDatabase()
     : db_(0),
       page_size_(-1),
       transaction_in_progress_(false),
+#if DCHECK_IS_ON()
       sharable_(false),
+#endif
       opening_thread_(0),
       open_error_(SQLITE_ERROR),
       open_error_message_(),
-      last_changes_count_(0) {}
+      last_changes_count_(0) {
+}
 
 SQLiteDatabase::~SQLiteDatabase() {
   Close();
