third_party/WebKit/Source/modules/webdatabase/sqlite/SQLiteDatabase.h
@@ -96,7 +96,9 @@ class SQLiteDatabase {
   const char* LastErrorMsg();
 
   sqlite3* Sqlite3Handle() const {
+#if DCHECK_IS_ON()
     DCHECK_EQ(sharable_ || CurrentThread(), opening_thread_ || !db_);
+#endif
     return db_;
   }
 
@@ -138,7 +140,9 @@ class SQLiteDatabase {
   int page_size_;
 
   bool transaction_in_progress_;
+#if DCHECK_IS_ON()
   bool sharable_;
+#endif
 
   Mutex authorizer_lock_;
   CrossThreadPersistent<DatabaseAuthorizer> authorizer_;
